crates/as2_pcode/src/parser/snapshots/ruasc_as2_pcode__parser__tests__printed@op_precedence__mul_div_mod.pcode.snap
---
source: crates/as2_pcode/src/parser/tests.rs
expression: "parsed.unwrap_or_else(|_| Actions::empty())"
input_file: samples/as2_pcode/op_precedence/mul_div_mod.pcode
---
ConstantPool "a", "b", "c", "a=", ", b=", ", c=", "----", "a * b / c = ", "(a * b) / c = ", "---", "a / b * c = ", "(a / b) * c = ", "a % b * c = ", "(a % b) * c = ", "a * b % c = ", "(a * b) % c = ", "a % b / c = ", "(a % b) / c = ", "a / b % c = ", "(a / b) % c = ", "Nested: a * b / c * b = ", "Nested reference: (((a * b) / c) * b) = "
Push constant0
Push 20
DefineLocal
Push constant1
Push 6
DefineLocal
Push constant2
Push 4
DefineLocal
Push constant3
Push constant0
GetVariable
Add2
Push constant4
Add2
Push constant1
GetVariable
Add2
Push constant5
Add2
Push constant2
GetVariable
Add2
Trace
Push constant6
Trace
Push constant7
Push constant0
GetVariable
Push constant1
GetVariable
Multiply
Push constant2
GetVariable
Divide
Add2
Trace
Push constant8
Push constant0
GetVariable
Push constant1
GetVariable
Multiply
Push constant2
GetVariable
Divide
Add2
Trace
Push constant9
Trace
Push constant10
Push constant0
GetVariable
Push constant1
GetVariable
Divide
Push constant2
GetVariable
Multiply
Add2
Trace
Push constant11
Push constant0
GetVariable
Push constant1
GetVariable
Divide
Push constant2
GetVariable
Multiply
Add2
Trace
Push constant9
Trace
Push constant12
Push constant0
GetVariable
Push constant1
GetVariable
Modulo
Push constant2
GetVariable
Multiply
Add2
Trace
Push constant13
Push constant0
GetVariable
Push constant1
GetVariable
Modulo
Push constant2
GetVariable
Multiply
Add2
Trace
Push constant9
Trace
Push constant14
Push constant0
GetVariable
Push constant1
GetVariable
Multiply
Push constant2
GetVariable
Modulo
Add2
Trace
Push constant15
Push constant0
GetVariable
Push constant1
GetVariable
Multiply
Push constant2
GetVariable
Modulo
Add2
Trace
Push constant9
Trace
Push constant16
Push constant0
GetVariable
Push constant1
GetVariable
Modulo
Push constant2
GetVariable
Divide
Add2
Trace
Push constant17
Push constant0
GetVariable
Push constant1
GetVariable
Modulo
Push constant2
GetVariable
Divide
Add2
Trace
Push constant9
Trace
Push constant18
Push constant0
GetVariable
Push constant1
GetVariable
Divide
Push constant2
GetVariable
Modulo
Add2
Trace
Push constant19
Push constant0
GetVariable
Push constant1
GetVariable
Divide
Push constant2
GetVariable
Modulo
Add2
Trace
Push constant9
Trace
Push constant20
Push constant0
GetVariable
Push constant1
GetVariable
Multiply
Push constant2
GetVariable
Divide
Push constant1
GetVariable
Multiply
Add2
Trace
Push constant21
Push constant0
GetVariable
Push constant1
GetVariable
Multiply
Push constant2
GetVariable
Divide
Push constant1
GetVariable
Multiply
Add2
Trace
